unpackaged/main/default/objects/sked_Staging_Location__c/fields/sked_Address__c.field-meta.xml
<CustomField>
    <fullName>sked_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>