unpackaged/main/default/objects/sked_Staging_Location__c/fields/sked_COSL_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_COSL_Count__c</fullName>
    <label>COSL Count</label>
    <summaryForeignKey>sked_Collection_Op_Staging_Location__c.sked_Staging_Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>