unpackaged/main/default/objects/sked_Staging_Location__c/fields/sked_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>